--- a/index.html
+++ b/index.html
@@ -2,25 +2,142 @@
 <html lang="eng">
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Patisserie Cloclo</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400i&display=swap&subset=latin-ext" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+ 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+ 	<link rel="stylesheet" href="carrousel.css">
 </head>
 <body>
- <div class="menu"></div>
+ <div class="navbar">
+    <a class="logo" href="#">
+      <img src="Images/logo.jpg" alt="logo">
+    </a>
+    <div class="menu">
+      <a href="#" class="link active">Accueil</a>
+      <a href="#" class="link active">Nos produits</a>
+      <a href="#" class="link active">Notre équipe</a>
+      <a href="#" class="link active">Vidéos</a>
+      <a href="#" class="link active">Partenaires</a>
+      <a href="#" class="link active">Blog</a>
+      <a href="#" class="link active">Contact</a>
+    </div>
+ </div>
+ <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+ <ol class="carousel-indicators">
+   <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+   <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+   <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+ </ol>
+<img src=image class="height: 50vh" width="60vw">
+ <div class="carousel-inner">
+   <div class="carousel-item active">
+     <img src="Images/Anniversaire.jpeg" class="d-block w-100 img-carrousel" alt="...">
+   </div>
+   <div class="carousel-item">
+     <img src="Images/Citrouille.jpeg" class="d-block w-100 img-carrousel" alt="...">
+   </div>
+   <div class="carousel-item">
+     <img src="Images/cupcake.jpg" class="d-block w-100 img-carrousel" alt="...">
+   </div>
+   <div class="carousel-item">
+     <img src="Images/Fête.jpg" class="d-block w-100 img-carrousel" alt="...">
+   </div>
+   <div class="carousel-item">
+     <img src="Images/Gâteau anniversaire 1.jpg" class="d-block w-100 img-carrousel" alt="...">
+   </div>
+   <div class="carousel-item">
+     <img src="Images/Gâteau de mariage.jpeg" class="d-block w-100 img-carrousel" alt="...">
+   </div>
+   <div class="carousel-item">
+     <img src="Images/Gâteau fraise.jpeg" class="d-block w-100 img-carrousel" alt="...">
+   </div>
+   <div class="carousel-item">
+     <img src="Images/Gâteau licorne.jpeg" class="d-block w-100 img-carrousel" alt="...">
+   </div>
+   <div class="carousel-item">
+     <img src="Images/Représentation gâteaux.jpeg" class="d-block w-100 img-carrousel" alt="...">
+   </div>
+ </div>
+ <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+   <span class="sr-only">Previous</span>
+ </a>
+ <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+   <span class="carousel-control-next-icon" aria-hidden="true"></span>
+   <span class="sr-only">Next</span>
+ </a>
+</div>
 
 
 
+<div class="container mt-3">
+    <div class="row">
+      <div class="col-12 col-md-4 mb-3">
+        <div class="card">
+          <img src="Images/Gâteau de mariage.jpeg" class="card-img-top img-height img-fit" alt="Gâteau de mariage">
+          <div class="card-body">
+            <h5 class="card-title">Gâteau de mariage</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-4 mb-3">
+        <div class="card">
+          <img src="Images/cupcake.jpg" class="card-img-top img-height img-fit" alt="cupcake">
+          <div class="card-body">
+            <h5 class="card-title">Cupcake</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-4 mb-3">
+        <div class="card">
+          <img src="Images/Anniversaire.jpeg" class="card-img-top img-height img-fit" alt="Anniversaire">
+          <div class="card-body">
+            <h5 class="card-title">Anniversaire</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-4 mb-3">
+        <div class="card">
+          <img src="Images/Fête.jpg" class="card-img-top img-height img-fit" alt="Fête">
+          <div class="card-body">
+            <h5 class="card-title">Fête</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-4 mb-3">
+        <div class="card">
+          <img src="Gâteau anniversaire 1.jpg" class="card-img-top img-height img-fit" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Gâteau anniversaire 1</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-4 mb-3">
+        <div class="card">
+          <img src="images/dragons.jpg" class="card-img-top img-height img-fit" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
 
 
-
-
-
-
-
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+</div>
+ <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+ <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
+
