--- a/nos_produits.html
+++ b/nos_produits.html
@@ -37,6 +37,30 @@
           </div>
         </div>
       </div>
+      <div class="col-sm-12 col-md-4 mb-3">
+        <div class="card">
+          <img src="images/muffins_divers.jpg" class="card-img-top img-height img-fit" alt="...">
+          <div class="card-body">
+            <p class="card-text">Muffins</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-4 mb-3">
+        <div class="card">
+          <img src="images/choux_chantilly.jpeg" class="card-img-top img-height img-fit" alt="...">
+          <div class="card-body">
+            <p class="card-text">Choux à la chantilly</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-4 mb-3">
+        <div class="card">
+          <img src="images/gateau_choco.jpeg" class="card-img-top img-height img-fit" alt="...">
+          <div class="card-body">
+            <p class="card-text">Gâteau au chocolat</p>
+          </div>
+        </div>
+      </div>
 	  </div>
 	</div>
 		   
