--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <div class="d-flex">
         <div class="vertical-menu">
           <a href="#" class=active>Accueil</a>
-          <a href="#" class=active>Nos Produits</a>
-          <a href="#" class=active>Notre Equipe</a>
+          <a href="nos_produits.html" class=active>Nos Produits</a>
+          <a href="notre_equipe.html" class=active>Notre Equipe</a>
           <a href="#" class=active>Vidéos</a>
           <a href="#" class=active>Partenaires</a>
           <a href="#" class=active>blog</a>
