--- a/nos_produits.html
+++ b/nos_produits.html
@@ -15,7 +15,7 @@
     <div class="row">
       <div class="col-12 col-md-4 mb-3">
         <div class="card">
-          <img src="images/anniversaire.jpg" class="card-img-top img-height img-fit" alt="gateau au chocolat">
+          <img src="Images/gateau_anniversaire_01.jpg" class="card-img-top img-height img-fit" alt="gateau au chocolat">
           <div class="card-body">
             <p class="card-text">Anniversaire</p>
           </div>
@@ -23,7 +23,7 @@
       </div>
       <div class="col-sm-12 col-md-4 mb-3">
         <div class="card">
-          <img src="images/gateau_mariage.jpeg" class="card-img-top img-height img-fit" alt="...">
+          <img src="Images/gateau_de_mariage.jpeg" class="card-img-top img-height img-fit" alt="...">
           <div class="card-body">
             <p class="card-text">Mariage</p>
           </div>
@@ -31,14 +31,38 @@
       </div>
       <div class="col-sm-12 col-md-4 mb-3">
         <div class="card">
-          <img src="images/macarons.jpeg" class="card-img-top img-height img-fit" alt="...">
+          <img src="Images/macarons.jpeg" class="card-img-top img-height img-fit" alt="...">
           <div class="card-body">
             <p class="card-text">Macarons</p>
           </div>
         </div>
       </div>
-	  </div>
-	</div>
+      <div class="col-sm-12 col-md-4 mb-3">
+        <div class="card">
+          <img src="Images/cupcake.jpg" class="card-img-top img-height img-fit" alt="...">
+          <div class="card-body">
+            <p class="card-text">Muffins</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-4 mb-3">
+        <div class="card">
+          <img src="Images/choux_chantilly.jpeg" class="card-img-top img-height img-fit" alt="...">
+          <div class="card-body">
+            <p class="card-text">Choux à la chantilly</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-4 mb-3">
+        <div class="card">
+          <img src="Images/gateau_chocolat.jpeg" class="card-img-top img-height img-fit" alt="...">
+          <div class="card-body">
+            <p class="card-text">Gâteau au chocolat</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 		   
 		
 	
