--- a/notre_equipe.html
+++ b/notre_equipe.html
@@ -12,16 +12,19 @@
 	<div class="container">
 		<h1>Notre équipe</h1>
 		<div class="equipier">
-			<img src="images/jonathan.jpg">
+			<img src="Images/jonathan.jpg">
 			<div class="paragraph text-justify">
-		<h2>Jonathan Serafini</h2>
-		<p>Issu d'une lignée d'aventuriers passionnés, j'aime pimenter mon quotidien de challenges, de renouvellements et de rencontres. Je suis convaincu que ces traits de caractère sont une composante forte de la philosophie du développeur. En effet, à mon sens le rôle du développeur est d'accompagner ses clients dans la conception de leurs projets avec leurs particularités et leurs défis techniques. J'ai donc créé MihiVai avec l'ambition qu'elle réponde à cette promesse et qu'elle me permette de partager et de m'aventurer sur des univers toujours différents.	
-		</p>
+				<h2>Jonathan Serafini</h2>
+				<p>Issu d'une lignée d'aventuriers passionnés, j'aime pimenter mon quotidien de challenges, de renouvellements et de rencontres. Je suis convaincu que ces traits de caractère sont une composante forte de la philosophie du développeur. En effet, à mon sens le rôle du développeur est d'accompagner ses clients dans la conception de leurs projets avec leurs particularités et leurs défis techniques. J'ai donc créé MihiVai avec l'ambition qu'elle réponde à cette promesse et qu'elle me permette de partager et de m'aventurer sur des univers toujours différents.	
+				</p>
+			</div>
 		</div>
-	</div>
-	
+		<div><h3>
+			hello
+		</h3></div>
 
 
-	
-</body>
-</html>
+
+
+	</body>
+	</html>
